Adding files, Removing files and using TailwindCSS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "livePreview.defaultPreviewPath": "/index.html"
+    "livePreview.defaultPreviewPath": "/index.html",
+    "cSpell.words": [
+        "emailvalidation"
+    ]
 }
